# resym

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  cache-serviceworker.js  index.html  resym_web.js
.cargo/: config
.github/workflows/: build.yml  clippy.yml  coverage.yml  deploy-web.yml  release.yml  tests.yml
resym/: Cargo.toml  build.rs
resym/resources/web/: cache-serviceworker.js  index.html
resym/src/: frontend.rs  lib.rs  main.rs  mode.rs  module_tree.rs  module_tree_view.rs  resym_app.rs  settings.rs  syntax_highlighting.rs
resym/src/ui_components/: code_view.rs  console.rs  index_list.rs  mod.rs  module_tree.rs  open_url.rs  search_filters.rs  settings.rs  text_search.rs  type_list.rs  type_search.rs
resym_core/: Cargo.toml
resym_core/src/: backend.rs  diffing.rs  error.rs  frontend.rs  lib.rs  pdb_file.rs  rayon_utils.rs  syntax_highlighting.rs
resym_core/src/pdb_types/: class.rs  enumeration.rs  field.rs  forward_declaration.rs  forward_reference.rs  method.rs  mod.rs  primitive_types.rs  union.rs
resym_core/tests/: module_diffing.rs  module_dumping.rs  module_listing.rs  type_diffing.rs  type_reconstruction.rs
resym_core/tests/data/: test.cpp  test_diff_from.cpp
resym_core/tests/snapshots/: module_diffing__module_diffing_by_path.snap  module_dumping__module_dumping_by_index_microsoft.snap  module_dumping__module_dumping_by_index_msvc.snap  module_dumping__module_dumping_by_index_portable.snap  module_dumping__module_dumping_by_index_raw.snap  module_dumping__module_dumping_by_path_portable.snap  module_listing__module_listing.snap  type_diffing__struct_diffing-2.snap  type_diffing__struct_diffing-3.snap  type_diffing__struct_diffing-4.snap  type_diffing__struct_diffing-5.snap  type_diffing__struct_diffing.snap  type_diffing__struct_diffing_no_dependencies_with_line_numbers-3.snap  type_diffing__struct_diffing_no_dependencies_with_line_numbers-4.snap  type_diffing__struct_diffing_no_dependencies_with_line_numbers-5.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-0.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-1.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-10.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-11.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-12.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-13.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-14.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-15.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-16.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-17.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-18.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-19.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-2.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-20.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-21.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-22.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-23.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-3.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-4.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-5.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-6.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-7.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-8.snap  type_reconstruction__type_reconstruction_microsoft_access_specifiers-9.snap  type_reconstruction__type_reconstruction_msvc_access_specifiers-0.snap  (+77 more)
resymc/: Cargo.toml
resymc/src/: frontend.rs  main.rs  resymc_app.rs  resymc_options.rs  syntax_highlighting.rs
scripts/: build_resym_web.bat  build_resym_web.sh  setup_web.bat  setup_web.sh  start_server.sh
snippets/wasm_thread-8ee53d0673203880/src/wasm32/js/: module_workers_polyfill.min.js
src/: backend.rs  diffing.rs  frontend.rs  lib.rs  pdb_file.rs
src/pdb_types/: class.rs  enumeration.rs  field.rs  method.rs  mod.rs  union.rs
tests/: type_diffing.rs  type_reconstruction.rs
tests/data/: test_diff_from.cpp  test_diff_to.cpp
tests/snapshots/: type_diffing__struct_diffing_no_dependencies_with_line_numbers-2.snap  type_diffing__struct_diffing_no_dependencies_with_line_numbers.snap  type_diffing__struct_diffing_no_dependencies_without_line_numbers-2.snap  type_diffing__struct_diffing_no_dependencies_without_line_numbers-3.snap  type_diffing__struct_diffing_no_dependencies_without_line_numbers-4.snap  type_diffing__struct_diffing_no_dependencies_without_line_numbers-5.snap  type_diffing__struct_diffing_no_dependencies_without_line_numbers-6.snap  type_diffing__struct_diffing_no_dependencies_without_line_numbers.snap  type_reconstruction__type_reconstruction_no_dependencies-10.snap  type_reconstruction__type_reconstruction_no_dependencies-11.snap  type_reconstruction__type_reconstruction_no_dependencies-12.snap  type_reconstruction__type_reconstruction_no_dependencies-13.snap  type_reconstruction__type_reconstruction_no_dependencies-15.snap  type_reconstruction__type_reconstruction_no_dependencies-2.snap  type_reconstruction__type_reconstruction_no_dependencies-3.snap  type_reconstruction__type_reconstruction_no_dependencies-4.snap  type_reconstruction__type_reconstruction_no_dependencies-6.snap  type_reconstruction__type_reconstruction_no_dependencies.snap
