[package]
name = "resym"
version = "0.1.0"
edition = "2021"
exclude = [
    "tests/data/*",
]

[dependencies]
eframe = "0.17"
pdb = "0.7"
tinyfiledialogs = "3.0"
anyhow = "1.0"
log = "0.4"
memory_logger = { version = "0.1", features = ["blocking"] }
rayon = "1.5"
num_cpus = "1.13"
dashmap = { version = "5.2", features = ["rayon"] }
