[package]
name = "resym"
version.workspace = true
edition = "2021"
rust-version = "1.67"
build = "build.rs"

[package.metadata.winres]
ProductName = "resym"
ProductVersion = "0.3.0"
FileDescription = "Cross-platform tool that allows browsing and extracting C and C++ type declarations from PDB files."
LegalCopyright = "Copyright © resym developers"

[dependencies]
resym_core = { version = "0.3", path = "../resym_core" }

eframe = { version = "0.21", features = ["persistence"] }
tinyfiledialogs = "3.9"
serde = "1.0"
syntect = "5.0"
anyhow = "1.0"
log = "0.4"
memory_logger = { version = "0.1", features = ["blocking"] }
crossbeam-channel = "0.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
image = "0.24"
