[package]
name = "resym"
version.workspace = true
edition = "2021"
rust-version = "1.75"
build = "build.rs"
default-run = "resym"

[package.metadata.winres]
ProductName = "resym"
ProductVersion = "0.3.0"
FileDescription = "Cross-platform tool that allows browsing and extracting C and C++ type declarations from PDB files."
LegalCopyright = "Copyright © resym developers"

[lib]
name = "resym_web"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["rayon", "http"]

rayon = ["resym_core/rayon"]
http = ["resym_core/http"]

[dependencies]
resym_core = { version = "0.4", path = "../resym_core", default-features = false }

eframe = { version = "0.31", features = ["persistence"] }
serde = "1.0"
anyhow = "1.0"
log = "0.4"
memory_logger = { version = "0.1", features = ["blocking"] }
crossbeam-channel = "0.5"
# Note(ergrelet): `fancy-regex` is less performant than `onig` at the moment
# but is more portable (i.e., compiles to wasm32)
syntect = { version = "5.2", default-features = false, features=["default-fancy"] }
ahash = { version = "0.8", default-features = false, features = [
    "no-rng", # we don't need DOS-protection, so we let users opt-in to it instead
    "std",
] }
bevy_reflect = "0.15"

# Non-Web
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Note(ergrlet): use `tinyfiledialogs` by default as it's quite portable on
# non-wasm platforms
tinyfiledialogs = "3.9"

# Web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
# Use rfd on wasm platforms, instead of `tinyfiledialogs`
rfd = "0.11"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
image = "0.24"
