[package]
name = "resym_core"
version.workspace = true
edition = "2021"
rust-version = "1.67"
exclude = [
    "tests/data/*",
    "tests/snapshots/*",
]

[features]
default = ["rayon"]

rayon = ["dep:rayon", "dep:num_cpus", "dashmap/rayon"]

[dependencies]
pdb = { git = "https://github.com/ergrelet/pdb", branch = "0.8.0-resym" }
thiserror = "1.0"
log = "0.4"
rayon = { version = "1.5", optional = true }
num_cpus = { version = "1.13", optional = true }
crossbeam-channel = "0.5"
dashmap = { version = "5.2" }
regex = "1.5"
similar = "2.1"

# Web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_thread = { version = "0.2", features = ["es_modules"] }
instant = "0.1"

[dev-dependencies]
insta = "1.14"
