[package]
name = "resym_core"
version.workspace = true
edition = "2021"
rust-version = "1.75"
exclude = [
    "tests/data/*",
    "tests/snapshots/*",
]

[features]
default = ["rayon", "http"]

rayon = ["dep:rayon", "dep:num_cpus", "dashmap/rayon"]
http = ["dep:ehttp", "dep:url"]

[dependencies]
pdb = { git = "https://github.com/ergrelet/pdb", branch = "0.8.0-resym" }
thiserror = "1.0"
log = "0.4"
rayon = { version = "1.5", optional = true }
num_cpus = { version = "1.13", optional = true }
crossbeam-channel = "0.5"
dashmap = { version = "5.2" }
regex = "1.5"
similar = "2.1"
ehttp = { version = "0.2", optional = true }
url = { version = "2.3", optional = true }

# Web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_thread = { version = "0.2", features = ["es_modules"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[dev-dependencies]
insta = "1.14"
