[package]
name = "resymc"
version = "0.2.0"
edition = "2021"

[dependencies]
resym_core = { version = "0.2", path = "../resym_core" }

structopt = { version = "0.3", default-features = false }
syntect = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
crossbeam-channel = "0.5"

[dev-dependencies]
tempdir = "0.3"
