[package]
name = "resymc"
version.workspace = true
edition = "2021"
rust-version = "1.75"

[features]
default = ["rayon"]

rayon = ["resym_core/rayon"]

[dependencies]
resym_core = { version = "0.3", path = "../resym_core", default-features = false }

structopt = { version = "0.3", default-features = false }
syntect = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
crossbeam-channel = "0.5"

[dev-dependencies]
tempdir = "0.3"
